# wt-resources-toolkit

./: pyproject.toml
wt_resources_toolkit/: _tool.py
